--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,9 @@ spring.social.auto-connection-views=false
 
 security.basic.enabled=false
 
-#spring.datasource.url=jdbc:h2:mem:social;DB_CLOSE_ON_EXIT=FALSE
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:h2:~/social-test
+spring.datasource.url=jdbc:h2:~/social-test;DB_CLOSE_ON_EXIT=FALSE
 
 maps.airports=airports.csv
 maps.apiIp=https://api.test.sabre.com
