--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.social.auto-connection-views=false
 security.basic.enabled=false
 
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:h2:~/social-test;DB_CLOSE_ON_EXIT=FALSE
 
 google.apikey=AIzaSyAdUOM7XKmfD56v-ROOGe-GmoTLT6LDrOY
