--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.social.auto-connection-views=true
 security.basic.enabled=false
 
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:h2:~/social-test;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:~/social-test
 
 google.apikey=AIzaSyAdUOM7XKmfD56v-ROOGe-GmoTLT6LDrOY
 
