--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ security.basic.enabled=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:~/social-test
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
 
 google.apikey=AIzaSyAdUOM7XKmfD56v-ROOGe-GmoTLT6LDrOY
 
