--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.social.auto-connection-views=true
 security.basic.enabled=false
 
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:h2:~/social-test
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
